# trading_app

./: .dockerignore  .env-prod  .gitignore  .pre-commit-config.yaml  =  Dockerfile  README.md  alembic.ini  celery.sh  config.py  docker-compose.yaml  dump.rdb  main.py  pyproject.toml
auth/: db.py  manager.py  schemas.py
migrations/: env.py
migrations/versions/: 1448627e985e_role.py  179cc0990a1f_add_message_model.py  191ab4ed4da3_add_message_model.py  2023-04-04_a801786bf3ae_add_operation.py  2023_03_31_de0f5ef3a9fe_create_database.py  2023_04_05_7b21a4ffa613_add_tables.py  2023_04_10_74253a14558f_add_message_model.py  98a717b1d8e0_add_message_model.py  bb3a16a08318_create_database.py  d0d980c7f507_add_message_model.py
models/: models.py
src/: config.py  database.py  main.py
src/auth/: auth_config.py  manager.py  models.py
src/chat/: models.py  router.py  ws_connect.py
src/operations/: models.py  router.py  schemas.py
src/pages/: router.py
src/static/css/: other.css  style.css
src/tasks/: router.py  tasks.py
src/templates/: base.html  chat.html  home.html  search.html
tests/: conftest.py  test_auth.py  test_operations.py
