[tool.poetry]
name = "trading-app"
version = "0.1.0"
description = ""
authors = ["alstacon <alstacon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
sqlalchemy = "^2.0.7"
alembic = "^1.10.2"
python-dotenv = "^1.0.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^10.4.1"}
asyncpg = "^0.27.0"
fastapi-cache2 = {extras = ["redis"], version = "^0.2.1"}
redis = "^4.5.4"
asyncio = "^3.4.3"
celery = "^5.2.7"
flower = "^1.2.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
